# xania

./: .bashrc  .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt  mud-settings-dev.sh  start-mud.sh
.github/workflows/: c-cpp.yml
area/: .bash_profile  .gitignore  Arachnos.are  AstralPlane.are  CMakeLists.txt  Camelot.are  CausewayToImmortality.are  ChapelCatacombs.are  CiqualasLair.are  CrystalmirLake.are  DangerousNeighbourhood.are  Dell.are  DenOfMonsters.are  DescentToHell.are  DragonCult.are  DragonTower.are  DrowCity.are  DwarvenCatacombs.are  DwarvenDaycare.are  DwarvenKingdom.are  DylansWilderness.are  ElementalCanyon.are  EnchantedForest.are  FireNewtMountain.are  FlyingCitadel.are  Galaxy.are  GnomeVillage.are  Graveyard.are  HaonDor.are  Heavens.are  Help.are  HelpClans.are  HelpGroups.are  HelpLore.are  HelpRomXania.are  HighTowerOfSorcery.are  HolyGrove.are  Imladris.are  ImmortalZone.are  Japan.are  (+155 more)
conan/: CMakeLists.txt  conan.cmake  conanfile.txt
docker-dev/: Dockerfile  README.md
ext/seasocks-1.4.3/src/main/c/seasocks/: Request.h
html/: .gitignore  XaniaDoc.htm  bg.html  body_index.html  clans.html  features.html  footer_defaultmasterborder.html  header_index.html  index.html  left_index.html  players.html  rc.html  webwho.html
html/About_MUDs/: about_muds.html  body_about_muds.html  header_about_muds.html  left_about_muds.html
html/Background/: background.html  body_background.html  header_background.html  left_background.html
html/Clans/: body_clans.html  clans.html  header_clans.html  left_clans.html
html/Contact_Us/: body_contact_us.html  contact_us.html  header_contact_us.html  left_contact_us.html
html/Features/: body_features.html  features.html  header_features.html  left_features.html
html/Links/: body_links.html  header_links.html  left_links.html  links.html
html/Player_pages/: body_player_pages.html  header_player_pages.html  left_player_pages.html  player_pages.html
html/Races___Classes/: body_races___classes.html  header_races___classes.html  left_races___classes.html  races___classes.html
html/Who_s_online/: header_who_s_online.html  left_who_s_online.html  oldbody.html  who_s_online.html
html/gfx/: clans.pov  features.pov  players.pov  xania.pov
infra/: .gitignore  Makefile  README.md  make_json.py  packer.json
infra/scripts/: crontab.root  crontab.xania  data-backup.sh  install-xania.sh  mud-settings-prod.sh  pfile-upgrade-lib.sh  prepare-pfiles.sh  servicectl.sh  setup-xania.sh  setup.sh  start-doorman.sh  start-xania.sh  sync-users.sh  upgrade-pfiles.sh  upgrade-xania.sh  xania.logrotate
infra/scripts/init/: doorman.service  xania.service
infra/terraform/: .terraform.lock.hcl  data.tf  main.tf  users.tf  xania.tf
scripts/: conan.cmake  mobs-adjust-armour-class.pl  object-resets-set-probability.py  rooms-remove-areanum.pl  validate-symlinks.sh
src/: AFFECT_DATA.cpp  AFFECT_DATA.hpp  AREA_DATA.cpp  AREA_DATA.hpp  Act.cpp  Act.hpp  AffectFlag.hpp  AffectList.cpp  AffectList.hpp  AffectLocation.hpp  Alignment.hpp  Area.cpp  Area.hpp  AreaData.cpp  AreaData.hpp  AreaList.cpp  AreaList.hpp  ArgParser.cpp  ArgParser.hpp  ArmourClass.hpp  AttackType.cpp  AttackType.hpp  Attacks.cpp  Attacks.hpp  Ban.cpp  Ban.hpp  BitsAffect.hpp  BitsBodyForm.hpp  BitsBodyPart.hpp  BitsCharAct.hpp  BitsCharOffensive.hpp  BitsCommChannel.hpp  BitsContainerState.hpp  BitsDamageResistance.hpp  BitsDamageTolerance.hpp  BitsExitState.hpp  BitsObjectExtra.hpp  BitsObjectWear.hpp  BitsPlayerAct.hpp  BitsRoomState.hpp  (+325 more)
src/apps/: CMakeLists.txt  areas.cpp  map.cpp  pfu.cpp  pfu.hpp  pfumain.cpp  query.cpp
src/apps/test/: CMakeLists.txt  pfutest.cpp
src/apps/test/test_data/area/: area.lst  limbo_test.are
src/apps/test/test_data/data/player/: Versionfour
src/apps/test/test_data/data/player/expected-upgrades/: Versionfour
src/chat/: CMakeLists.txt  Database.cpp  Database.hpp  Eliza.cpp  Eliza.hpp  KeywordResponses.cpp  KeywordResponses.hpp  Makefile  README  akey.C  akey.cpp  akey.hpp  allkeys.C  allkeys.cpp  allkeys.hpp  chat_utils.cpp  chat_utils.hpp  chatconstants.hpp  chatlink.h  chatmain.C  chatmain.cpp  chatmain.hpp  chatrun.C  chatrun.cpp  eliza.C  eliza.cpp  eliza.hpp  utils.cpp  utils.hpp
src/chat/test/: CMakeLists.txt  DatabaseTest.cpp  ElizaTest.cpp  chat_utils_test.cpp
src/common/: BitOps.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Fd.cpp  Fd.hpp  README.md  StandardBits.hpp  Time.hpp  doorman_protocol.h  mask_hostname.cpp  mask_hostname.hpp  urange.hpp
src/common/test/: CMakeLists.txt  ConfigurationTest.cpp  TimeTest.cpp  mask_hostname_test.cpp  urange_test.cpp
src/doorman/: Byte.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  Doorman.cpp  Doorman.hpp  Fd.cpp  Fd.hpp  IdAllocator.cpp  IdAllocator.hpp  Logger.cpp  Logger.hpp  Misc.cpp  Misc.hpp  SeasocksToLogger.hpp  TelnetLineParser.cpp  TelnetLineParser.hpp  TelnetProtocol.cpp  TelnetProtocol.hpp  Xania.cpp  Xania.hpp  doorman.c  doorman.cpp  doorman.h  doorman.hpp  doorman_protocol.h  main.cpp
src/doorman/test/: CMakeLists.txt  IdAllocatorTest.cpp  TelnetProtocolTest.cpp
src/test/: AFFECT_DATATest.cpp  AffectListTest.cpp  AreaTest.cpp  ArgParserTest.cpp  AttacksTest.cpp  BansTest.cpp  BodySizeTest.cpp  CMakeLists.txt  CatchFormatters.hpp  CharTest.cpp  ClassTest.cpp  CommandSetTest.cpp  CorpseSummonerTest.cpp  DamageMessagesTest.cpp  DamageToleranceTest.cpp  DescriptorTest.cpp  DiceTest.cpp  DuelTest.cpp  ExtraFlagTest.cpp  FlagTest.cpp  GenericListIterTest.cpp  GenericListTest.cpp  HelpTest.cpp  HitChanceTest.cpp  InjuredPartTest.cpp  InterpreterImplTest.cpp  LearningTest.cpp  LoggingTest.cpp  MProgImplTest.cpp  MProgLoaderTest.cpp  MaterialsTest.cpp  MemFile.hpp  MobIndexDataTest.cpp  MockMud.hpp  MockRng.hpp  NoteTest.cpp  ObjectTest.cpp  ObjectTypeTest.cpp  PcNutritionTest.cpp  PositionTest.cpp  (+27 more)
src/test/test_data/: area
src/test/test_data/player/: Khirsah  Themoog
toolchain/: clang-15.cmake  g++-10.cmake  g++-11.cmake  g++-12.cmake  g++-13.cmake
