include_directories(..)
file(GLOB SOURCE_FILES CONFIGURE_DEPENDS *.cpp *.hpp)
add_executable(chat_test ${SOURCE_FILES})
target_compile_definitions(chat_test PUBLIC TEST_RESOURCE_DIR="${CMAKE_SOURCE_DIR}/area/")
target_link_libraries(chat_test chat xania_lib CONAN_PKG::Catch2)
add_test(NAME chat_test COMMAND $<TARGET_FILE:chat_test>)
